# AI_chat

./: .env.example  README.md  docker-compose.yml  entrypoint.sh  initial_data.json  pyproject.toml
chat/: admin.py  consumers.py  models.py  routing.py  tasks.py  urls.py  views.py
chat/management/commands/: load_initial_data.py
config/: asgi.py  celery.py  settings.py  urls.py
templates/chat/: chat.html  index.html
